--- a/fe-src/src/App.scss
+++ b/fe-src/src/App.scss
@@ -25,6 +25,7 @@
       background-position: top center;
       background-size: cover;
       background-repeat: no-repeat;
+      background-attachment: fixed;
 
       opacity: .5;
     }
